WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294687
PDF find-in-page overlay holes and text indicators are misaligned.
https://bugs.webkit.org/show_bug.cgi?id=294687
Summary
PDF find-in-page overlay holes and text indicators are misaligned.
Megan Gardner
Reported
2025-06-18 11:47:44 PDT
PDF find-in-page overlay holes and text indicators are misaligned.
Attachments
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2025-06-18 11:47:45 PDT
<
rdar://problem/153685772
>
Megan Gardner
Comment 2
2025-06-18 11:53:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46920
EWS
Comment 3
2025-06-18 13:14:27 PDT
Committed
296398@main
(f9a684ddd3b8): <
https://commits.webkit.org/296398@main
> Reviewed commits have been landed. Closing PR #46920 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug