PDF find-in-page overlay holes and text indicators are misaligned. https://bugs.webkit.org/show_bug.cgi?id=294687 rdar://153685772

Reviewed by Abrar Rahman Protyasha and Tim Horton.

The overlay needs the same corner radius as the indicators in
order for them to match and look correct.

* Source/WebKit/WebProcess/WebPage/FindController.cpp:
(WebKit::FindController::findIndicatorRadius const):

Canonical link: https://commits.webkit.org/296398@main